# ChangeLog for dev-python/python-cdb
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-cdb/ChangeLog,v 1.21 2008/09/27 16:31:58 armin76 Exp $

  27 Sep 2008; Raúl Porcel <armin76@gentoo.org> python-cdb-0.32-r1.ebuild:
  arm stable wrt #231306

  18 Jul 2008; Olivier Crête <tester@gentoo.org> python-cdb-0.32-r1.ebuild:
  Stable on amd64, bug #231306

  14 Jul 2008; nixnut <nixnut@gentoo.org> python-cdb-0.32-r1.ebuild:
  Stable on ppc wrt bug 231306

  14 Jul 2008; Raúl Porcel <armin76@gentoo.org> python-cdb-0.32-r1.ebuild:
  ia64/sparc stable wrt #231306

  10 Jul 2008; Christian Faulhammer <opfer@gentoo.org>
  python-cdb-0.32-r1.ebuild:
  stable x86, bug 231306

  17 Jan 2008; Fabian Groffen <grobian@gentoo.org> python-cdb-0.32.ebuild,
  python-cdb-0.32-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  09 Dec 2006; Timothy Redaelli <drizzt@gentoo.org>
  python-cdb-0.32-r1.ebuild:
  Add ~x86-fbsd keyword

*python-cdb-0.32-r1 (25 Sep 2006)

  25 Sep 2006; Marien Zwart <marienz@gentoo.org>
  +files/python-cdb-0.32-python-2.5-compat.patch,
  +python-cdb-0.32-r1.ebuild:
  Revision bump with a patch to build on python 2.5 and a src_test. Closes bug
  #148505.

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> python-cdb-0.32.ebuild:
  Mark 0.32 stable on ia64

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> python-cdb-0.32.ebuild:
  Mark 0.32 ~ia64

  02 Mar 2006; Markus Ullmann <jokey@gentoo.org> python-cdb-0.32.ebuild:
  Adding ~arm keyword

  24 Jan 2006; Jason Wever <weeve@gentoo.org> python-cdb-0.32.ebuild:
  Stable on SPARC.

  28 Aug 2005; Fabian Groffen <grobian@gentoo.org> python-cdb-0.32.ebuild:
  Marking ~ppc-macos (bug #87701)

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  python-cdb-0.32.ebuild:
  Stable on ppc.

  01 Apr 2005; Joseph Jezak <josejx@gentoo.org> python-cdb-0.32.ebuild:
  Marked ~ppc for bug #87349.
