@@ -1,5 +1,7 @@
 AUX python-cdb-0.32-python-2.5-compat.patch 366 RMD160 dd180191925ac9f17e8ac3f3c7f837622a737e43 SHA1 8ad3210c5fab37f7a902acaaaefc25f042388455 SHA256 854aa18d3bfd030ff321cdffcc1e10e8229e9a8db93d22566b170dd2b0c43f0b
 DIST python-cdb-0.32.tar.gz 18985 RMD160 665102db0d08df00dde5bb235d708158fe15c2ce SHA1 b2a109d601f36cf6a829992461a6c7db61022c45 SHA256 24d2593b02faf036b1ae9fdad3af66d0013a8a2cb1669439ece4863b5d7756c6
+DIST python-cdb-0.34.tar.gz 18865 RMD160 02519e7c03aae5798823ab4cd0388b6afaf1908a SHA1 6c5ef1f27fe0e5c2e9a4a032435ebf58c82639f2 SHA256 31c4c272d02c8f9ca66394c36be677fd9ea1813782cac73efacc5add2cbd677c
 EBUILD python-cdb-0.32-r1.ebuild 919 RMD160 4019ebb4a5cd7fb2bce07e1077ea986fbc76b3f7 SHA1 269dc1b08103a387dc0401d457514d07522bcf83 SHA256 ae38c13eb49e0c52bf919403460998bbd58723cf2ce58846189ee59c4b5cdcf3
-MISC ChangeLog 2523 RMD160 d1126bff7d36063ae393fb53ddf47bc0afde2511 SHA1 8f81c64a9da0e606bafa4de5ffb43994b469c2c2 SHA256 01f6d20e41711bf86dab4428f5196e461a1c2f1558535b9ed7c0a51702afc582
+EBUILD python-cdb-0.34.ebuild 926 RMD160 e397b3ab93323d0300683b98d23a2b0c9769cd7c SHA1 efc5c29310a5999707e803a32b05b2ea05d153e8 SHA256 7a057f28bf1f3df91b8a9f04b8905a894abcd2d65e0ac50dbab29762b7543e55
+MISC ChangeLog 2723 RMD160 9eda40e864356c7eb5ad42505eaae44bed59c323 SHA1 4f99cf84c248dc511394b7f434f648c7f1f515fe SHA256 25e39a473d02155edf7ece3620c47593482fbd10fa7c0458347e4fc973abfbb4
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
