@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-cdb
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-cdb/ChangeLog,v 1.21 2008/09/27 16:31:58 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-cdb/ChangeLog,v 1.22 2009/09/12 23:23:33 arfrever Exp $
+
+*python-cdb-0.34 (13 Sep 2009)
+
+  13 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -python-cdb-0.32.ebuild, +python-cdb-0.34.ebuild:
+  Version bump. Set SUPPORT_PYTHON_ABIS.
 
   27 Sep 2008; Raúl Porcel <armin76@gentoo.org> python-cdb-0.32-r1.ebuild:
   arm stable wrt #231306
